--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@casl/ability": "^5.4.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/elasticsearch": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.1",
